--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -73,7 +73,7 @@ build_cscs_gh200:
     matrix:
       - PY_VERSION: *test_python_versions
 
-.build_cscs_amd_rocm:
+build_cscs_amd_rocm:
   extends:
     - .container-builder-cscs-zen2
     - .build_common
@@ -127,12 +127,12 @@ test_cscs_gh200:
     # Limit test parallelism to avoid "OSError: too many open files" in the gt4py build stage.
     PYTEST_XDIST_AUTO_NUM_WORKERS: 32
 
-test_cscs_amd_rocm:
-  extends:
-    - .tds-container-runner-beverin-mi200
-    - .test_common
-  variables:
-  variables:
-    GT4PY_BUILD_JOBS: 8
-    # Limit test parallelism to avoid "OSError: too many open files" in the gt4py build stage.
-    PYTEST_XDIST_AUTO_NUM_WORKERS: 32
+# .test_cscs_amd_rocm:
+#   extends:
+#     - .tds-container-runner-beverin-mi200
+#     - .test_common
+#   variables:
+#   variables:
+#     GT4PY_BUILD_JOBS: 8
+#     # Limit test parallelism to avoid "OSError: too many open files" in the gt4py build stage.
+#     PYTEST_XDIST_AUTO_NUM_WORKERS: 32
