--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
       - id: check-useless-excludes
 
   - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-    rev: v2.14.0
+    rev: v2.15.0
     hooks:
       - id: pretty-format-toml
         args: [--autofix]
@@ -14,6 +14,8 @@ repos:
       - id: pretty-format-yaml
         args: [--autofix, --preserve-quotes, --indent, "2", --offset, "2"]
 
+  # We don't want to update this hook since newer versions of prettier are broken for pre-commit.
+  # TODO(egparedes): find a lightweight alternative to prettier
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
     hooks:
@@ -28,7 +30,6 @@ repos:
       - id: check-merge-conflict
       - id: check-toml
       - id: check-yaml
-      - id: destroyed-symlinks
 
   - repo: https://github.com/Lucas-C/pre-commit-hooks
     rev: v1.5.5
@@ -64,7 +65,7 @@ repos:
         name: ruff checker
         entry: uv run --frozen --isolated --group dev ruff check --force-exclude --fix
         types_or: [python, pyi, jupyter]
-        files: ^src/ # TODO(egparedes): add the `tests` folder here
+        exclude: '^(tests/|docs/|examples/)'  # TODO(egparedes): remove the exclusions
         require_serial: true
 
       - <<: *uv-managed-hook
