Fix image generation and dockerfile

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -6,6 +6,7 @@ ENV LC_ALL=C.UTF-8
 
 ARG WORKDIR_PATH=/workspace
 ENV WORKDIR=${WORKDIR_PATH}
+WORKDIR ${WORKDIR}
 
 ARG DEBIAN_FRONTEND=noninteractive
 ARG EXTRA_APTGET=""
