Add manual dispatch

--- a/.github/workflows/test-components.yml
+++ b/.github/workflows/test-components.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch: # Add this for manual triggering
 
 jobs:
   # First job to read Python versions from .python-versions file
