Remove 'all' project extra and mark dace dependencies as development only

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,16 @@
 
 [build-system]
 build-backend = 'setuptools.build_meta'
-requires = ['cython>=3.0.0', 'setuptools>=70.0.0', 'versioningit>=3.1.1', 'wheel>=0.33.6']
+requires = [
+  'cython>=3.0.0',
+  'setuptools>=70.0.0',
+  'versioningit>=3.1.1',
+  'wheel>=0.33.6'
+]
 
 # -- Dependency groups --
 [dependency-groups]
-build = [
-  'cython>=3.0.0',
-  'pip>=22.1.1',
-  'setuptools>=70.0.0',
-  'wheel>=0.33.6'
-]
+build = ['cython>=3.0.0', 'pip>=22.1.1', 'setuptools>=70.0.0', 'wheel>=0.33.6']
 dev = [
   {include-group = 'build'},
   {include-group = 'docs'},
@@ -129,21 +129,23 @@ readme = 'README.md'
 requires-python = '>=3.10, <3.14'
 
 [project.optional-dependencies]
-# bundles
-all = ['gt4py[dace,formatting,jax,performance,testing]']
-# device-specific extras
+cartesian = ['gt4py[dace-cartesian,jax,standard,testing]']
 cuda11 = ['cupy-cuda11x>=12.0']
 cuda12 = ['cupy-cuda12x>=12.0']
-# features
-dace = ['dace>=1.0.2,<1.1.0']  # v1.x will contain breaking changes, see https://github.com/spcl/dace/milestone/4
-dace-next = ['dace']  # pull dace latest version from the git repository
-formatting = ['clang-format>=9.0']
+dace-cartesian = [
+  'dace>=1.0.2,<1.1.0'
+]  # v1.x will contain breaking changes, see https://github.com/spcl/dace/milestone/4
+dace-next-dev = [
+  'dace>=1.0.0'
+]  # pull dace latest version from the git repository
 jax = ['jax>=0.4.26']
 jax-cuda12 = ['jax[cuda12_local]>=0.4.26', 'gt4py[cuda12]']
-performance = ['scipy>=1.14.1']
+next = ['gt4py[jax,standard,testing]']
+next-dev = ['gt4py[dace-next-dev,jax,standard,testing]']
 rocm4_3 = ['cupy-rocm-4-3>=13.3.0']
 rocm5_0 = ['cupy-rocm-5-0>=13.3.0']
 rocm6_0 = ['cupy>=13.4.1']
+standard = ['clang-format>=9.0', 'scipy>=1.14.1']
 testing = ['hypothesis>=6.93', 'pytest>=7.0']
 
 [project.scripts]
@@ -182,13 +184,7 @@ source_pkgs = ['gt4py']
 [tool.mypy]
 disallow_incomplete_defs = true
 disallow_untyped_defs = true
-exclude = [
-  '^setup\.py$',
-  'build/.*$',
-  'ci/*.$',
-  'docs/.*$',
-  'tests/.*$'
-]
+exclude = ['^setup\.py$', 'build/.*$', 'ci/*.$', 'docs/.*$', 'tests/.*$']
 ignore_missing_imports = true
 implicit_optional = false
 implicit_reexport = false
@@ -418,15 +414,24 @@ conflicts = [
     {extra = 'cuda11'},
     {extra = 'jax-cuda12'},
     {extra = 'rocm4_3'},
-    {extra = 'rocm5_0'}
+    {extra = 'rocm5_0'},
+    {extra = 'rocm6_0'}
   ],
   [
-    {extra = 'dace'},
-    {extra = 'dace-next'}
+    {extra = 'dace-cartesian'},
+    {extra = 'dace-next-dev'}
   ],
   [
-    {extra = 'all'},
-    {extra = 'dace-next'}
+    {extra = 'dace-cartesian'},
+    {extra = 'next-dev'}
+  ],
+  [
+    {extra = 'cartesian'},
+    {extra = 'next-dev'}
+  ],
+  [
+    {extra = 'cartesian'},
+    {extra = 'dace-next-dev'}
   ]
 ]
 required-version = ">=0.6.10"
@@ -438,7 +443,7 @@ url = 'https://test.pypi.org/simple/'
 
 [tool.uv.sources]
 atlas4py = {index = "test.pypi"}
-dace = {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2025_07_03", extra = "dace-next"}
+dace = {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2025_07_03", extra = "dace-next-dev"}
 
 # -- versioningit --
 [tool.versioningit]
