--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     rev: v2.15.0
     hooks:
       - id: pretty-format-toml
-        args: [--autofix]
+        args: [--autofix, --indent, "2"]
         exclude: tach.toml
       - id: pretty-format-yaml
         args: [--autofix, --preserve-quotes, --indent, "2", --offset, "2"]
@@ -65,7 +65,7 @@ repos:
         name: ruff checker
         entry: uv run --frozen --isolated --group dev ruff check --force-exclude --fix
         types_or: [python, pyi, jupyter]
-        exclude: '^(tests/|docs/|examples/)'  # TODO(egparedes): remove the exclusions
+        exclude: "^(tests/|docs/|examples/)" # TODO(egparedes): remove the exclusions
         require_serial: true
 
       - <<: *uv-managed-hook
