test different variable

--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -121,7 +121,7 @@ build_py310_image_aarch64:
   variables:
     CSCS_CUDA_MPS: 1
     SLURM_JOB_NUM_NODES: 1
-    SLURM_GPUS: 1
+    SLURM_GPUS_PER_NODE: 4
     SLURM_TIMELIMIT: 5
     PYENV_VERSION: $PYVERSION
     VIRTUALENV_SYSTEM_SITE_PACKAGES: 1
