--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -46,9 +46,10 @@ stages:
     # and the contents of the `uv.lock` with the python dependencies versions.
     - DOCKER_BUILD_ARGS_VALUES=`for var in $(echo "$DOCKER_BUILD_ARGS" | jq -r '.[]'); do echo "$var=${!var}"; done`
     - DOCKER_TAG=`echo "$(cat ${DOCKERFILE}) ${DOCKER_BUILD_ARGS_VALUES} $(cat uv.lock)" | sha256sum | head -c 16`
-    - GT4PY_IMAGE_PREFIX=${CSCS_REGISTRY_PATH}/public/${ARCH}/base/gt4py-ci:${DOCKER_TAG}
+    - GT4PY_IMAGE_PREFIX=${CSCS_REGISTRY_PATH}/public/${ARCH}/base/gt4py-ci
     - echo "GT4PY_IMAGE_PREFIX=${GT4PY_IMAGE_PREFIX}" >> base.env
-    - export PERSIST_IMAGE_NAME=${GT4PY_IMAGE_PREFIX}-${PY_VERSION}
+    - echo "DOCKER_TAG=${DOCKER_TAG}" >> base.env
+    - export PERSIST_IMAGE_NAME=${GT4PY_IMAGE_PREFIX}-${PY_VERSION}:${DOCKER_TAG}
     # Uncomment the following line to see the environment variables for debugging 
     # - env | sort 
   parallel:
@@ -87,7 +88,7 @@ build_cscs_gh200:
 # -- Test stage --
 .test_common:
   stage: test
-  image: ${GT4PY_IMAGE_PREFIX}-${PY_VERSION}
+  image: ${GT4PY_IMAGE_PREFIX}-${PY_VERSION}:${DOCKER_TAG}
   variables:
     CSCS_CUDA_MPS: 1
     SLURM_JOB_NUM_NODES: 1
