Transform dace extras to groups

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ requires = [
 # -- Dependency groups --
 [dependency-groups]
 build = ['cython>=3.0.0', 'pip>=22.1.1', 'setuptools>=70.0.0', 'wheel>=0.33.6']
+dace-cartesian = ['dace>=1.0.0']  # refined in [tool.uv.sources]
+dace-next = ['dace>=1.0.0']  # refined in [tool.uv.sources]
 dev = [
   {include-group = 'build'},
   {include-group = 'docs'},
@@ -132,12 +134,8 @@ requires-python = '>=3.10, <3.14'
 cartesian = ['gt4py[dace-cartesian,jax,standard,testing]']
 cuda11 = ['cupy-cuda11x>=12.0']
 cuda12 = ['cupy-cuda12x>=12.0']
-dace-cartesian = [
-  'dace>=1.0.2,<1.1.0'
-]  # v1.x will contain breaking changes, see https://github.com/spcl/dace/milestone/4
-dace-next-dev = [
-  'dace>=1.0.0'
-]  # pull dace latest version from the git repository
+# 'dace' defined as dependency-group until supported versions are pushed to PyPI
+# dace = ['dace>=1.0.2,<1.1.0']
 jax = ['jax>=0.4.26']
 jax-cuda12 = ['jax[cuda12_local]>=0.4.26', 'gt4py[cuda12]']
 next = ['gt4py[jax,standard,testing]']
@@ -418,20 +416,8 @@ conflicts = [
     {extra = 'rocm6_0'}
   ],
   [
-    {extra = 'dace-cartesian'},
-    {extra = 'dace-next-dev'}
-  ],
-  [
-    {extra = 'dace-cartesian'},
-    {extra = 'next-dev'}
-  ],
-  [
-    {extra = 'cartesian'},
-    {extra = 'next-dev'}
-  ],
-  [
-    {extra = 'cartesian'},
-    {extra = 'dace-next-dev'}
+    {group = 'dace-cartesian'},
+    {group = 'dace-next'}
   ]
 ]
 required-version = ">=0.6.10"
@@ -443,7 +429,10 @@ url = 'https://test.pypi.org/simple/'
 
 [tool.uv.sources]
 atlas4py = {index = "test.pypi"}
-dace = {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2025_07_03", extra = "dace-next-dev"}
+dace = [
+  {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2025_07_03", group = "dace-next"},
+  {git = "https://github.com/romanc/dace", branch = "romanc/stree-to-sdfg", group = "dace-cartesian"}
+]
 
 # -- versioningit --
 [tool.versioningit]
