--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -48,7 +48,7 @@ stages:
     - echo "GT4PY_IMAGE_PREFIX=${GT4PY_IMAGE_PREFIX}" >> build.env
     - DOCKER_BUILD_ARGS_VALUES=`for var in $(echo "$DOCKER_BUILD_ARGS" | jq -r '.[]'); do echo "$var=${!var}"; done`
     - DOCKER_TAG=`echo "$(cat ${DOCKERFILE}) ${DOCKER_BUILD_ARGS_VALUES} $(cat uv.lock)" | sha256sum | head -c 16`
-    - echo "DOCKER_TAG=${DOCKER_TAG}" >> build.env
+    - echo "DOCKER_TAG-${PY_VERSION}=${DOCKER_TAG}" >> build.env
     - export PERSIST_IMAGE_NAME=${GT4PY_IMAGE_PREFIX}-${PY_VERSION}:${DOCKER_TAG}
     - echo "PERSIST_IMAGE_NAME=${PERSIST_IMAGE_NAME}"
     # Uncomment the following line to see the environment variables for debugging 
@@ -89,9 +89,7 @@ build_cscs_gh200:
 # -- Test stage --
 .test_common:
   stage: test
-  needs:
-    - 'build_cscs_gh200: [${PY_VERSION}]'
-  image: ${GT4PY_IMAGE_PREFIX}-${PY_VERSION}:${DOCKER_TAG}
+  image: ${GT4PY_IMAGE_PREFIX}-${PY_VERSION}:${DOCKER_TAG-${PY_VERSION}}
   variables:
     CSCS_CUDA_MPS: 1
     SLURM_GPUS_PER_NODE: 4
