--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = ['cython>=3.0.0', 'setuptools>=70.0.0', 'versioningit>=3.1.1', 'wheel
 # -- Dependency groups --
 [dependency-groups]
 build = ['cython>=3.0.0', 'pip>=22.1.1', 'setuptools>=70.0.0', 'wheel>=0.33.6']
-dace-cartesian = ['dace>=1.0.0']  # refined in [tool.uv.sources]
+dace-cartesian = ['dace>=1.0.0']
 dace-next = ['dace>=1.0.0']  # refined in [tool.uv.sources]
 dev = [
   {include-group = 'build'},
@@ -424,8 +424,7 @@ url = 'https://test.pypi.org/simple/'
 [tool.uv.sources]
 atlas4py = {index = "test.pypi"}
 dace = [
-  {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2025_07_03", group = "dace-next"},
-  {git = "https://github.com/romanc/dace", branch = "romanc/stree-to-sdfg", group = "dace-cartesian"}
+  {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2025_07_03", group = "dace-next"}
 ]
 
 # -- versioningit --
