--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = ['cython>=3.0.0', 'setuptools>=70.0.0', 'versioningit>=3.1.1', 'wheel
 # -- Dependency groups --
 [dependency-groups]
 build = ['cython>=3.0.0', 'pip>=22.1.1', 'setuptools>=70.0.0', 'wheel>=0.33.6']
-dace-cartesian = ['dace>=1.0.0']
+dace-cartesian = ['dace>=1.0.2,<1.1.0']
 dace-next = ['dace>=1.0.0']  # refined in [tool.uv.sources]
 dev = [
   {include-group = 'build'},
