ci: try node sharing

--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -121,8 +121,9 @@ build_py310_image_aarch64:
   variables:
     CSCS_CUDA_MPS: 1
     SLURM_JOB_NUM_NODES: 1
-    SLURM_GPUS_PER_NODE: 4
+    SLURM_GPUS_PER_NODE: 1
     SLURM_TIMELIMIT: 5
+    SLURM_PARTITION: "shared"
     PYENV_VERSION: $PYVERSION
     VIRTUALENV_SYSTEM_SITE_PACKAGES: 1
     CI_NOX_VERBOSE: 1
