--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -40,7 +40,6 @@ stages:
     # names, if they exist, or otherwise the defaults in the Dockerfile will be used.
     # To override the defaults, just define these variables in the actual job.
     DOCKER_BUILD_ARGS: '["BASE_IMAGE", "CACHE_DIR", "EXTRA_APTGET", "EXTRA_UV_ENV_VARS", "EXTRA_UV_PIP_ARGS", "EXTRA_UV_SYNC_ARGS", "PY_VERSION", "UV_VERSION", "WORKDIR_PATH" ]'
-    IMAGE_NAME: ${CSCS_REGISTRY_PATH}/public/${ARCH}/base/gt4py-ci-{PY_VERSION} # the tag will be added in the before_script
     PERSIST_IMAGE_NAME: $CSCS_REGISTRY_PATH/base/my_base_image
     WATCH_FILECHANGES: 'ci/Dockerfile ci/cscs-ci.yml ci/cscs-ci-ext-config.yml uv.lock'
   before_script:
@@ -50,7 +49,7 @@ stages:
     # only if any of these files change.
     - export DOCKER_TAG=`eval cat $WATCH_FILECHANGES | sha256sum | head -c 16`
     - echo "DOCKER_TAG=$DOCKER_TAG" > build.env
-    - export PERSIST_IMAGE_NAME=$IMAGE_NAME:$DOCKER_TAG
+    - export PERSIST_IMAGE_NAME=${CSCS_REGISTRY_PATH}/public/${ARCH}/base/gt4py-ci-{PY_VERSION}:$DOCKER_TAG
     - echo "PERSIST_IMAGE_NAME=$PERSIST_IMAGE_NAME" >> build.env
     # Uncomment the following line to see the environment variables for debugging 
     # - env | sort 
