--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -40,6 +40,7 @@ stages:
     # names, if they exist, or otherwise the defaults in the Dockerfile will be used.
     # To override the defaults, just define these variables in the actual job.
     DOCKER_BUILD_ARGS: '["BASE_IMAGE", "CACHE_DIR", "EXTRA_APTGET", "EXTRA_UV_ENV_VARS", "EXTRA_UV_PIP_ARGS", "EXTRA_UV_SYNC_ARGS", "PY_VERSION", "UV_VERSION", "WORKDIR_PATH" ]'
+    IMAGE_NAME: ${CSCS_REGISTRY_PATH}/public/${ARCH}/base/gt4py-ci-${PY_VERSION}  # A tag is added in the before_script
     PERSIST_IMAGE_NAME: $CSCS_REGISTRY_PATH/base/my_base_image
     WATCH_FILECHANGES: 'ci/Dockerfile ci/cscs-ci.yml ci/cscs-ci-ext-config.yml uv.lock'
   before_script:
@@ -49,10 +50,10 @@ stages:
     # push the image to the registry. 
     - export DOCKER_TAG=`eval cat $WATCH_FILECHANGES | sha256sum | head -c 16`
     - echo "DOCKER_TAG=$DOCKER_TAG" > build.env
-    - export PERSIST_IMAGE_NAME=${CSCS_REGISTRY_PATH}/public/${ARCH}/base/gt4py-ci-{PY_VERSION}:$DOCKER_TAG
+    - export PERSIST_IMAGE_NAME=$IMAGE_NAME:$DOCKER_TAG
     - echo "PERSIST_IMAGE_NAME=$PERSIST_IMAGE_NAME" >> build.env
     # Uncomment the following line to see the environment variables for debugging 
-    - env | sort
+    # - env | sort
   parallel:
     matrix:
       - PY_VERSION: *test_python_versions
@@ -89,9 +90,10 @@ build_cscs_gh200:
 # -- Test stage --
 .test_common:
   stage: test
-  image: ${CSCS_REGISTRY_PATH}/public/${ARCH}/base/gt4py-ci-{PY_VERSION}:${DOCKER_TAG}
+  image: ${IMAGE_NAME}:${DOCKER_TAG}
   variables:
     CSCS_CUDA_MPS: 1
+    IMAGE_NAME: ${CSCS_REGISTRY_PATH}/public/${ARCH}/base/gt4py-ci-${PY_VERSION}
     SLURM_GPUS_PER_NODE: 4
     SLURM_JOB_NUM_NODES: 1
     SLURM_TIMELIMIT: 5
